--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -45,8 +45,8 @@
         class="mx-auto h-12 sm:h-16 object-contain hover:opacity-80 transition"
       />
     </a>
-    <p class="text-sm text-gray-500 mt-1">
-      Your Trusted Source for Unbiased News
-    </p>
+<!--    <p class="text-sm text-gray-500 mt-1">-->
+<!--      Your Trusted Source for Unbiased News-->
+<!--    </p>-->
   </div>
 </header>
